crates/adr-hunks/tests/snapshots/e2e__pr0001_add_retry.snap
---
source: crates/adr-hunks/tests/e2e.rs
expression: hunks
---
[
  {
    "id": "[id]",
    "kind": {
      "kind": "call",
      "added_edges": [
        6,
        7
      ],
      "removed_edges": [
        5
      ]
    },
    "provenance": {
      "source": "adr-hunks/call",
      "version": "0.1.0",
      "pass_id": "hunks",
      "hash": "[hash]"
    }
  }
]
